--- a/catalog.html
+++ b/catalog.html
@@ -6,36 +6,50 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="img/logo-device-black.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
-        </a>
-        <ul class="user-navigation">
-          <li class="search-open"><a href="#">Поиск по сайту</a></li>
-          <li class="login-link"><a href="login.html">Войти</a></li>
-          <li class="compare"><a href="compare.html">Сравнить</a></li>
-          <li class="basket"><a href="basket.html">Корзина</a></li>
-        </ul>
-        <ul class="site-navigation">
-          <li><a href="catalog.html">Каталог товаров</a></li>
-          <li>
-            <button class="button catalog-open-button" type="button" aria-label="Раскрыть меню каталога товаров"></button>
-          </li>
-          <li><a href="delivery.html">Доставка</a></li>
-          <li><a href="warranty.html">Гарантия</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-        <ul class="header-catalog-menu">
-          <li><a href="catalog-vr.html">Виртуальная реальность</a></li>
-          <li><a href="catalog-monopods.html">Моноподы для селфи</a></li>
-          <li><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
-          <li><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
-          <li><a href="catalog-smartwatches.html">Умные часы</a></li>
-          <li><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
-        </ul>
-      </nav>
+  <body class="inner-page">
+    <header class="main-header container">
+        <nav class="main-navigation">
+          <div class="main-header-logo-block">
+            <a class="main-header-logo">
+              <img src="img/logo-device-black.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
+            </a>
+          </div>
+          <ul class="user-navigation">
+            <li class="search-open"><a href="#">Поиск по сайту</a></li>
+            <li class="login-link"><a href="login.html">Войти</a></li>
+            <li class="compare"><a href="compare.html">Сравнить</a></li>
+            <li class="basket"><a href="basket.html">Корзина</a></li>
+          </ul>
+          <ul class="site-navigation">
+            <li class="header-catalog"><a href="catalog.html">Каталог товаров</a></li>
+            <li class="header-catalog-button">
+              <button class="button catalog-open-button" type="button" aria-label="Раскрыть меню каталога товаров"></button>
+            </li>
+            <li class="header-delivery"><a href="delivery.html">Доставка</a></li>
+            <li class="header-warranty"><a href="warranty.html">Гарантия</a></li>
+            <li class="header-contacts"><a href="contacts.html">Контакты</a></li>
+          </ul>
+          <div class="header-catalog-block">
+            <div class="header-catalog-column-1">
+              <ul class="header-catalog-menu">
+                <li><a href="catalog-vr.html">Виртуальная реальность</a></li>
+                <li><a href="catalog-monopods.html">Моноподы для селфи</a></li>
+                <li><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
+              </ul>
+            </div>
+            <div class="header-catalog-column-2">
+              <ul class="header-catalog-menu">
+                <li><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
+                <li><a href="catalog-smartwatches.html">Умные часы</a></li>
+              </ul>
+            </div>
+            <div class="header-catalog-column-3">
+              <ul class="header-catalog-menu">
+                <li><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
     </header>
 
     <main class="container">
@@ -165,36 +179,59 @@
     </main>
 
     <footer class="main-footer">
-      <div class="footer-top">
-        <a>
-          <img class="footer-logo" src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
-        </a>
-        <ul class="footer-user-navigation">
-          <li class="login-link"><a href="login.html">Войти</a></li>
-          <li class="compare"><a href="compare.html">Сравнить</a></li>
-          <li class="basket"><a href="basket.html">Корзина</a></li>
-        </ul>
-      </div>
-      <div class="footer-middle">
-        <p class="footer-address">г. Москва, ул. Строителей, 15</p>
-        <ul class="middle-menu">
-          <li><a href="delivery.html">Доставка</a></li>
-          <li><a href="warranty.html">Гарантия</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-        <p class="footer-tel">Тел.: +7 (495) 495-95-95</p>
-      </div>
-      <div class="footer-bottom">
-        <ul class="social-buttons">
-          <li><a class="social-button" href="#" aria-label="Фейсбук">Фейсбук</a></li>
-          <li><a class="social-button" href="#" aria-label="Инстаграм">Инстаграм</a></li>
-          <li><a class="social-button" href="#" aria-label="Твиттер">Твиттер</a></li>
-        </ul>
-        <p class="footer-copyright">
-          <a href="https://htmlacademy.ru/">
-            <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
-          </a>
-        </p>
+      <div class="main-footer-wrapper">
+        <div class="container">
+          <div class="footer-top">
+            <div class="column-1">
+              <a>
+                <img class="footer-logo" src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
+              </a>
+            </div>
+            <div class="column-2">
+              <ul class="footer-user-navigation">
+                <li class="footer-login-link"><a href="login.html">Войти</a></li>
+                <li class="footer-compare"><a href="compare.html">Сравнить</a></li>
+                <li class="footer-basket"><a href="basket.html">Корзина</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-middle">
+            <div class="column-1">
+              <span class="footer-address">г. Москва, ул. Строителей, 15</span>
+            </div>
+            <div class="column-2">
+              <ul class="middle-menu">
+                <li><a href="delivery.html">Доставка</a></li>
+                <li><a href="warranty.html">Гарантия</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+              </ul>
+            </div>
+            <div class="column-3">
+              <span class="footer-tel">Тел.: +7 (495) 495-95-95</span>
+            </div>
+          </div>
+          <div class="footer-bottom">
+            <div class="column-1">
+            </div>
+            <div class="column-2">
+              <ul class="social-buttons">
+                <li>
+                  <a class="social-button" href="#" aria-label="Фейсбук">
+                  </a>
+                </li>
+                <li><a class="social-button" href="#" aria-label="Инстаграм"></a></li>
+                <li><a class="social-button" href="#" aria-label="Твиттер"></a></li>
+              </ul>
+            </div>
+            <div class="column-3">
+              <span class="footer-copyright">
+                <a href="https://htmlacademy.ru/">
+                  <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
+                </a>
+              </span>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
