--- a/index.html
+++ b/index.html
@@ -265,55 +265,57 @@
     </main>
 
     <footer class="main-footer">
-      <div class="container">
-        <div class="footer-top">
-          <div class="column-1">
-            <a>
-              <img class="footer-logo" src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
-            </a>
-          </div>
-          <div class="column-2">
-            <ul class="footer-user-navigation">
-              <li class="footer-login-link"><a href="login.html">Войти</a></li>
-              <li class="footer-compare"><a href="compare.html">Сравнить</a></li>
-              <li class="footer-basket"><a href="basket.html">Корзина</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="footer-middle">
-          <div class="column-1">
-            <span class="footer-address">г. Москва, ул. Строителей, 15</span>
-          </div>
-          <div class="column-2">
-            <ul class="middle-menu">
-              <li><a href="delivery.html">Доставка</a></li>
-              <li><a href="warranty.html">Гарантия</a></li>
-              <li><a href="contacts.html">Контакты</a></li>
-            </ul>
-          </div>
-          <div class="column-3">
-            <span class="footer-tel">Тел.: +7 (495) 495-95-95</span>
-          </div>
-        </div>
-        <div class="footer-bottom">
-          <div class="column-1">
-          </div>
-          <div class="column-2">
-            <ul class="social-buttons">
-              <li>
-                <a class="social-button" href="#" aria-label="Фейсбук">
-                </a>
-              </li>
-              <li><a class="social-button" href="#" aria-label="Инстаграм"></a></li>
-              <li><a class="social-button" href="#" aria-label="Твиттер"></a></li>
-            </ul>
-          </div>
-          <div class="column-3">
-            <span class="footer-copyright">
-              <a href="https://htmlacademy.ru/">
-                <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
+      <div class="main-footer-wrapper">
+        <div class="container">
+          <div class="footer-top">
+            <div class="column-1">
+              <a>
+                <img class="footer-logo" src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
               </a>
-            </span>
+            </div>
+            <div class="column-2">
+              <ul class="footer-user-navigation">
+                <li class="footer-login-link"><a href="login.html">Войти</a></li>
+                <li class="footer-compare"><a href="compare.html">Сравнить</a></li>
+                <li class="footer-basket"><a href="basket.html">Корзина</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-middle">
+            <div class="column-1">
+              <span class="footer-address">г. Москва, ул. Строителей, 15</span>
+            </div>
+            <div class="column-2">
+              <ul class="middle-menu">
+                <li><a href="delivery.html">Доставка</a></li>
+                <li><a href="warranty.html">Гарантия</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+              </ul>
+            </div>
+            <div class="column-3">
+              <span class="footer-tel">Тел.: +7 (495) 495-95-95</span>
+            </div>
+          </div>
+          <div class="footer-bottom">
+            <div class="column-1">
+            </div>
+            <div class="column-2">
+              <ul class="social-buttons">
+                <li>
+                  <a class="social-button" href="#" aria-label="Фейсбук">
+                  </a>
+                </li>
+                <li><a class="social-button" href="#" aria-label="Инстаграм"></a></li>
+                <li><a class="social-button" href="#" aria-label="Твиттер"></a></li>
+              </ul>
+            </div>
+            <div class="column-3">
+              <span class="footer-copyright">
+                <a href="https://htmlacademy.ru/">
+                  <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
+                </a>
+              </span>
+            </div>
           </div>
         </div>
       </div>
