index - сверстал первый слайд слайдера

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
               <h4 class="visually-hidden">Основные параметры товара</h4>
               <table class="slider-table">
                 <tr class="slider-table-head">
-                  <td>Длина палки</td>
-                  <td>Вес палки</td>
-                  <td>Материал</td>
+                  <td class="col1">Длина палки</td>
+                  <td class="col2">Вес палки</td>
+                  <td class="col3">Материал</td>
                 </tr>
                 <tr class="slider-table-data">
                   <td>8,5 м</td>
@@ -94,11 +94,6 @@
                 </tr>
               </table>
             </div>
-            <ul class="slider-pagination-list">
-              <li class="slider-pagination-item pagination-item-current"><a></a></li>
-              <li class="slider-pagination-item"><a href="#"></a></li>
-              <li class="slider-pagination-item"><a href="#"></a></li>
-            </ul>
           </li>
 
           <li class="slider-item">
