--- a/index.html
+++ b/index.html
@@ -96,37 +96,34 @@
             </div>
           </li>
 
-          <li class="slider-item">
+          <li class="slider-item" id="slide2">
             <h3 class="visually-hidden">Мотивирующий фитнес-браслет ХХХ</h3>
-            <p class="featured-item-image">
-              <a href="catalog-item.html">
-                <img src="img/product-1.jpg" width="111" height="222" alt="Мотивирующий фитнес-браслет ХХХ">
+            <div class="slider-left-column">
+              <a class="slider-image" href="catalog-item.html">
+                <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующий фитнес-браслет ХХХ">
               </a>
-            </p>
-            <p class="featured-item-number"><span>02</span></p>
-            <a href="catalog-item.html">
-              <p class="featured-item-slogan">Худеем<br>
-                правильно!
-              </p>
-            </a>
-            <p class="featured-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-            <a href="catalog-item.html">
-              <span class="button featured-item-button">Подробнее</span>
-            </a>
-            <ul class="slider-pagination-list">
-              <li class="slider-pagination-item"><a href="#"></a></li>
-              <li class="slider-pagination-item pagination-item-current"><a></a></li>
-              <li class="slider-pagination-item"><a href="#"></a></li>
-            </ul>
-            <h4 class="visually-hidden">Основные параметры товара</h4>
-            <table class="slider-table">
-              <tr class="slider-table-head">
-                <td>Без подзарядки</td>
-              </tr>
-              <tr class="slider-table-data">
-                <td>48 часов</td>
-              </tr>
-            </table>
+            </div>
+            <div class="slider-right-column">
+              <span class="slider-item-number">02</span>
+              <a href="catalog-item.html">
+                <p class="slider-item-slogan">Худеем<br>
+                  правильно!
+                </p>
+              </a>
+              <p class="slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+              <a href="catalog-item.html">
+                <span class="button slider-item-button">Подробнее</span>
+              </a>
+              <h4 class="visually-hidden">Основные параметры товара</h4>
+              <table class="slider-table">
+                <tr class="slider-table-head">
+                  <td class="col1">Без подзарядки</td>
+                </tr>
+                <tr class="slider-table-data">
+                  <td>48 часов</td>
+                </tr>
+              </table>
+            </div>
           </li>
 
           <li class="slider-item">
